--- a/springBootMongo.yml
+++ b/springBootMongo.yml
@@ -5,8 +5,8 @@ metadata:
   name: springapp-configmap
 data:
   # Configuration values can be set as key-value properties
-  username: springapp
-  password: mongodb@123
+  username: tajdocker1
+  password: Taj@9542
 ---
 # Replication Controller for springapp
 apiVersion: v1
