--- a/springBootMongo.yml
+++ b/springBootMongo.yml
@@ -9,7 +9,7 @@ data:
   password: Taj@9542
 ---
 # Replication Controller for springapp
-apiVersion: v1
+apiVersion: apps/v1
 kind: ReplicationController
 metadata:
   name: spring-controller
@@ -42,7 +42,7 @@ spec:
               key: password       
 ---
 # Node Port Service For SpringApp
-apiVersion: v1
+apiVersion: apps/v1
 kind: Service
 metadata:
   name: springboot
@@ -55,7 +55,7 @@ spec:
     app: springboot
 ---
 # Mongo RC with host path Volume
-apiVersion: v1
+apiVersion: apps/v1
 kind: ReplicationController
 metadata:
   name: mongo-controller
