--- a/springBootMongo.yml
+++ b/springBootMongo.yml
@@ -1,6 +1,6 @@
 # Config Map
-kind: ConfigMap 
-apiVersion: apps/v1 
+apiVersion: apps/v1
+kind: deployment
 metadata:
   name: springapp-configmap
 data:
