--- a/pom.xml
+++ b/pom.xml
@@ -44,13 +44,13 @@
       <groupId>com.fasterxml.jackson.core</groupId>
 
       <artifactId>jackson-module-jaxb-annotations</artifactId>
-      <version>${jackson.version}</version>
+      <version>2.10.0</version>
     </dependency>
 
     <dependency>
       <groupId>com.fasterxml.jackson.dataformat</groupId>
       <artifactId>jackson-dataformat-yaml</artifactId>
-      <version>${jackson.version}</version>
+      <version>2.10.0</version>
       <exclusions>
         <exclusion>
           <groupId>org.yaml</groupId>
